--- a/package.json
+++ b/package.json
@@ -2,20 +2,23 @@
   "name": "columns",
   "version": "0.0.2",
   "description": "Fluid columns for different screen resolution",
-  "main": "index.js",
-  "format": "es6",
-  "registry": "jspm",
-  "jspm": {
-    "dependencies": {
-      "component-classes": "npm:component-classes@^1.2.6",
-      "component-event": "npm:component-event@^0.1.4",
-      "css": "github:systemjs/plugin-css@^0.1.22",
-      "empty-element": "npm:empty-element@^1.0.0"
-    },
-    "devDependencies": {
-      "babel": "npm:babel-core@^5.8.24",
-      "babel-runtime": "npm:babel-runtime@^5.8.24",
-      "core-js": "npm:core-js@^1.1.4"
-    }
+  "main": "dist/index.js",
+  "style": "style.css",
+  "scripts": {
+    "build": "babel src --out-dir dist"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
+  "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-preset-es2015": "^6.9.0"
+  },
+  "dependencies": {
+    "component-classes": "^1.2.6",
+    "component-events": "^1.0.10",
+    "empty-element": "^1.0.0"
   }
 }
